# Auto-Research-Scientist

./: .gitignore  DEMO_SCRIPT.txt  Makefile  README.md  SUBMISSION_WRITEUP.md  agents-cli-manifest.yaml  pyproject.toml
app/: agent.py  config.py  fast_api_app.py  mcp_server.py
app/app_utils/: telemetry.py  typing.py
deployment/terraform/single-project/: variables.tf
